<resources>
    <string name="app_name">Firstapp</string>
    <string name="action_settings">Settings</string>
    <string name="eater_name">Eater Name</string>
    <string name="pick_me_one">Pick Me One!</string>
    <string name="restaurants">Restaurants</string>
    <string name="eat_quest">Eat-Quest!</string>
    <string name="hello">hello</string>
    <string name="title_activity_restaurant_preference">RestaurantPreference</string>
    <string-array name="rest_type">
        <item>Mexican</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Burger</item>
    </string-array>
    <string-array name="distance">
        <item>1 mile</item>
        <item>5 mile</item>
        <item>8 mile</item>
        <item>10 mile</item>
    </string-array>
</resources>
